# Tracking-Changes-in-SARS-CoV-2-Databases

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Tutorial.md  TutorialDocker.md  TutorialEuler.md  tutorial.md
aws_scripts/: aws_download_aligned_and_metadata.py
documentation/: add_a_new_query.md  database.md  static_data.md  tnode_data.md
documentation/queries/: count_hosts.md  count_indels.md  freq_bp.md
documentation/static_data/: acc_id.md  location.md
documentation/tnode_data/: acc_id.md  location.md
euler_data/: GISAID_preprocessing.sh  align_snapshot.sh  create_append_h5.sh  h5_plus_append.sh
integration_tests/: main.py  test_cli.py  test_queries.py
scripts/: add_owner.py  align.py  align_snapshot_modules.py  aws_download_aligned_and_metadata.py  constants.py  merge_aligned_modules.py  merge_aligned_provision_jsons.py  split_provision_json.py  split_snapshot.py
src/: main.cpp
src/cli/: append.cpp  append.hpp  config.cpp  config.hpp  create.cpp  create.hpp  query.cpp  query.hpp  stats.cpp  stats.hpp
src/common/: constants.cpp  constants.hpp  h5_helper.cpp  h5_helper.hpp  json_helper.cpp  json_helper.hpp  logger.cpp  logger.hpp  utils.cpp  utils.hpp
src/ds/: ctc.cpp  ctc.hpp  database.cpp  database.hpp  ps_treap.cpp  ps_treap.hpp
src/ds/static_types/: static_acc_id.cpp  static_acc_id.hpp  static_base.cpp  static_base.hpp  static_location.cpp  static_location.hpp
src/ds/tnode_types/: tnode_acc_id.cpp  tnode_acc_id.hpp  tnode_base.cpp  tnode_base.hpp  tnode_location.cpp  tnode_location.hpp
src/ds/treap_representation/: static_acc_id.cpp  static_acc_id.hpp  static_base.cpp  static_base.hpp  static_location.cpp  static_location.hpp
src/queries/: base_query.cpp  base_query.hpp  count_hosts.cpp  count_hosts.hpp  count_indels.cpp  count_indels.hpp  freq_bp.cpp  freq_bp.hpp
test_data/: 0000-01-01.provision.json  0000-01-01_with_2_changes.provision.json  0000-01-01_with_4_changes.provision.json  0000-01-01_with_6_changes.provision.json  cnt_host_test_v1.provision.json  cnt_host_test_v2.provision.json  covid_test_seq.fasta  modified_sequence_v1.provision.json  modified_sequence_v2.provision.json  modified_sequence_v3.provision.json
tutorials/: FastRunOnDocker.md  RunOnDocker.md  TutorialEuler.md
unit_tests/common/: test_h5_helper.cpp  test_json_helper.cpp
unit_tests/ds/: test_database.cpp  test_ps_treap.cpp
unit_tests/ds/static_types/: test_static_location.cpp
unit_tests/ds/tnode_types/: test_tnode_location.cpp
unit_tests/queries/: test_base.cpp  test_count_hosts.cpp  test_count_indels.cpp  test_freq_bp.cpp
